--- a/notebooks/cheap_optical_flow_from_fused_lidar.ipynb
+++ b/notebooks/cheap_optical_flow_from_fused_lidar.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "import numpy as np\n",
     "\n",
-    "from psegs.exp.fused_lidar import FusedLidarCloudTableBase\n",
+    "from psegs.exp.fused_lidar_flow import FusedLidarCloudTableBase\n",
     "\n",
     "import IPython.display\n",
     "import PIL.Image\n",
@@ -139,16 +139,19 @@
     "# !pip3 install nuscenes-devkit==1.1.2\n",
     "from psegs.datasets.nuscenes import NuscStampedDatumTableBase, NuscStampedDatumTableLabelsAllFrames\n",
     "class NuscFusedWorldCloudTableBase(FusedLidarCloudTableBase):\n",
-    "    #SRC_SD_TABLE = NuscStampedDatumTableBase\n",
+    "    #SRC_SD_TABLE = NuscStampedDatumTableBase -- Subclass must pick a NuScenes configuration!\n",
     "    \n",
     "    SPLITS = ['train_detect', 'train_track']\n",
     "    \n",
     "    @classmethod\n",
     "    def _filter_ego_vehicle(cls, cloud_ego):\n",
+    "        # Note: NuScenes authors have already corrected clouds for ego motion:\n",
+    "        # https://github.com/nutonomy/nuscenes-devkit/issues/481#issuecomment-716250423\n",
+    "        # But have not filtered out ego self-returns\n",
     "        cloud_ego = cloud_ego[np.where(  ~(\n",
     "                        (cloud_ego[:, 0] <= 1.5) & (cloud_ego[:, 0] >= -1.5) &  # Nusc lidar +x is +right\n",
     "                        (cloud_ego[:, 1] <= 2.5) & (cloud_ego[:, 0] >= -2.5) &  # Nusc lidar +y is +forward\n",
-    "                        (cloud_ego[:, 1] <= 1.5) & (cloud_ego[:, 0] >= -1.5)   # Nusc lidar +z is +up\n",
+    "                        (cloud_ego[:, 1] <= 1.5) & (cloud_ego[:, 0] >= -1.5)    # Nusc lidar +z is +up\n",
     "        ))]\n",
     "        return cloud_ego\n",
     "    \n",
@@ -284,10 +287,8 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "## Render Optical Flow"
    ]
