--- a/notebooks/cheap_optical_flow_from_fused_lidar.ipynb
+++ b/notebooks/cheap_optical_flow_from_fused_lidar.ipynb
@@ -123,6 +123,13 @@
     "              uri.topic LIKE '%cuboid%' OR uri.topic LIKE '%lidar%'\n",
     "          GROUP BY task_id\n",
     "        \"\"\")\n",
+    "        \n",
+    "        \n",
+    "        # TODO! for lidar and camera image!\n",
+    "        #         both_have_ego_pose = (\n",
+    "        #             ci1.extra.get('kitti-360.has-valid-ego-pose') and\n",
+    "        #             ci2.extra.get('kitti-360.has-valid-ego-pose'))\n",
+    "        \n",
     "        tasks_df = spark.sql('SELECT * FROM culi_tasks_df')\n",
     "        print('... done.')\n",
     "        return tasks_df.rdd\n"
