--- a/notebooks/cheap_optical_flow_eval.ipynb
+++ b/notebooks/cheap_optical_flow_eval.ipynb
@@ -71,7 +71,7 @@
     "## Setup\n",
     "\n",
     "!pip3 install pypng scikit-image\n",
-    "print()\n",
+    "print('fixme installs')\n",
     "print()\n",
     "print()\n",
     "\n",
@@ -1456,7 +1456,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
