--- a/notebooks/cheap_optical_flow_from_fused_lidar.ipynb
+++ b/notebooks/cheap_optical_flow_from_fused_lidar.ipynb
@@ -256,10 +256,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-02-19 03:15:43,938\toarph 1694613 : Using source root /opt/psegs/psegs \n",
-      "2021-02-19 03:15:43,939\toarph 1694613 : Using source root /opt/psegs \n",
-      "2021-02-19 03:15:44,025\toarph 1694613 : Generating egg to /tmp/tmp3h1of9xw_oarphpy_eggbuild ...\n",
-      "2021-02-19 03:15:44,115\toarph 1694613 : ... done.  Egg at /tmp/tmp3h1of9xw_oarphpy_eggbuild/psegs-0.0.0-py3.8.egg\n"
+      "2021-02-19 21:37:23,149\toarph 2168770 : Using source root /opt/psegs/psegs \n",
+      "2021-02-19 21:37:23,150\toarph 2168770 : Using source root /opt/psegs \n",
+      "2021-02-19 21:37:23,247\toarph 2168770 : Generating egg to /tmp/tmphise9bk1_oarphpy_eggbuild ...\n",
+      "2021-02-19 21:37:23,337\toarph 2168770 : ... done.  Egg at /tmp/tmphise9bk1_oarphpy_eggbuild/psegs-0.0.0-py3.8.egg\n"
      ]
     }
    ],
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
@@ -342,28 +342,28 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-02-19 03:15:47,244\tps   1694613 : Found Sequence 00 with 4541 scans\n",
-      "2021-02-19 03:15:47,245\tps   1694613 : Found Sequence 01 with 1101 scans\n",
-      "2021-02-19 03:15:47,247\tps   1694613 : Found Sequence 02 with 4661 scans\n",
-      "2021-02-19 03:15:47,248\tps   1694613 : Found Sequence 03 with 801 scans\n",
-      "2021-02-19 03:15:47,250\tps   1694613 : Found Sequence 05 with 2761 scans\n",
-      "2021-02-19 03:15:47,251\tps   1694613 : Found Sequence 06 with 1101 scans\n",
-      "2021-02-19 03:15:47,252\tps   1694613 : Found Sequence 07 with 1101 scans\n",
-      "2021-02-19 03:15:47,253\tps   1694613 : Found Sequence 09 with 1591 scans\n",
-      "2021-02-19 03:15:47,254\tps   1694613 : Found Sequence 10 with 1201 scans\n",
-      "2021-02-19 03:15:47,254\tps   1694613 : Found 18859 total scans\n",
-      "2021-02-19 03:15:47,255\tps   1694613 : Filtering to only 1 segments\n",
-      "2021-02-19 03:15:47,256\tps   1694613 : Finding scans for sequence 00 with no moving points ...\n",
-      "2021-02-19 03:15:50,816\tps   1694613 : ... sequence 00 has 3097 scans with no movers.\n",
-      "2021-02-19 03:16:05,241\tps   1694613 : Filtering to only 1 segments\n",
-      "2021-02-19 03:16:05,242\tps   1694613 : SemanticKITTIFusedWorldCloudTable building fused clouds ...\n",
-      "2021-02-19 03:16:05,242\tps   1694613 : ... have 1 segments to fuse ...\n",
-      "2021-02-19 03:16:05,243\tps   1694613 : ... working on 00 ...\n",
-      "2021-02-19 03:16:05,243\tps   1694613 : ... skipping 00; world and obj clouds done\n",
-      "2021-02-19 03:16:05,244\tps   1694613 : World Cloud: /opt/psegs/dataroot/fused_world_clouds/naive_cuboid_scrubber/semantikitti/train/00/fused_world.ply\n",
-      "2021-02-19 03:16:05,244\tps   1694613 : Obj Clouds: /opt/psegs/dataroot/fused_obj_clouds/naive_cuboid_scrubber/semantikitti/train/00\n",
-      "2021-02-19 03:16:05,250\toarph 1694613 : Progress for \n",
-      "FuseEachSegment [Pid:1694613 Id:139914457285680]\n",
+      "2021-02-19 21:37:26,682\tps   2168770 : Found Sequence 00 with 4541 scans\n",
+      "2021-02-19 21:37:26,683\tps   2168770 : Found Sequence 01 with 1101 scans\n",
+      "2021-02-19 21:37:26,686\tps   2168770 : Found Sequence 02 with 4661 scans\n",
+      "2021-02-19 21:37:26,687\tps   2168770 : Found Sequence 03 with 801 scans\n",
+      "2021-02-19 21:37:26,688\tps   2168770 : Found Sequence 05 with 2761 scans\n",
+      "2021-02-19 21:37:26,689\tps   2168770 : Found Sequence 06 with 1101 scans\n",
+      "2021-02-19 21:37:26,690\tps   2168770 : Found Sequence 07 with 1101 scans\n",
+      "2021-02-19 21:37:26,691\tps   2168770 : Found Sequence 09 with 1591 scans\n",
+      "2021-02-19 21:37:26,692\tps   2168770 : Found Sequence 10 with 1201 scans\n",
+      "2021-02-19 21:37:26,692\tps   2168770 : Found 18859 total scans\n",
+      "2021-02-19 21:37:26,693\tps   2168770 : Filtering to only 1 segments\n",
+      "2021-02-19 21:37:26,694\tps   2168770 : Finding scans for sequence 00 with no moving points ...\n",
+      "2021-02-19 21:37:33,102\tps   2168770 : ... sequence 00 has 3097 scans with no movers.\n",
+      "2021-02-19 21:37:47,578\tps   2168770 : Filtering to only 1 segments\n",
+      "2021-02-19 21:37:47,578\tps   2168770 : SemanticKITTIFusedWorldCloudTable building fused clouds ...\n",
+      "2021-02-19 21:37:47,579\tps   2168770 : ... have 1 segments to fuse ...\n",
+      "2021-02-19 21:37:47,580\tps   2168770 : ... working on 00 ...\n",
+      "2021-02-19 21:37:47,581\tps   2168770 : ... skipping 00; world and obj clouds done\n",
+      "2021-02-19 21:37:47,581\tps   2168770 : World Cloud: /opt/psegs/dataroot/fused_world_clouds/naive_cuboid_scrubber/semantikitti/train/00/fused_world.ply\n",
+      "2021-02-19 21:37:47,582\tps   2168770 : Obj Clouds: /opt/psegs/dataroot/fused_obj_clouds/naive_cuboid_scrubber/semantikitti/train/00\n",
+      "2021-02-19 21:37:47,589\toarph 2168770 : Progress for \n",
+      "FuseEachSegment [Pid:2168770 Id:139967877409520]\n",
       "-----------------------  ---------------\n",
       "Thruput\n",
       "N thru                   1 (of 1)\n",
@@ -371,12 +371,12 @@
       "Total time               0 seconds\n",
       "Total thru               0 bytes\n",
       "Rate                     0.0 bytes / sec\n",
-      "Hz                       542\n",
+      "Hz                       337\n",
       "Progress\n",
       "Percent Complete         100.000000\n",
       "Est. Time To Completion  0 seconds\n",
       "-----------------------  ---------------\n",
-      "2021-02-19 03:16:05,251\tps   1694613 : ... SemanticKITTIFusedWorldCloudTable done fusing clouds.\n"
+      "2021-02-19 21:37:47,589\tps   2168770 : ... SemanticKITTIFusedWorldCloudTable done fusing clouds.\n"
      ]
     },
     {
@@ -384,8 +384,8 @@
      "output_type": "stream",
      "text": [
       "num tasks 3097\n",
-      "running map.. count\n",
-      "10\n"
+      "restrict to 50\n",
+      "running map.. count\n"
      ]
     }
    ],
@@ -394,6 +394,7 @@
     "\n",
     "class SemanticKITTIOFlowRenderer(OpticalFlowRenderBase):\n",
     "    FUSED_LIDAR_SD_TABLE = SemanticKITTIFusedWorldCloudTable\n",
+    "    MAX_TASKS_PER_SEGMENT = 50\n",
     "\n",
     "R = SemanticKITTIOFlowRenderer\n",
     "seg_uris = R.FUSED_LIDAR_SD_TABLE.get_all_segment_uris()\n",
