--- a/notebooks/cheap_optical_flow_from_fused_lidar.ipynb
+++ b/notebooks/cheap_optical_flow_from_fused_lidar.ipynb
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
@@ -542,9 +542,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2021-02-22 07:42:08,009\toarph 3937441 : Using source root /opt/psegs/psegs \n",
+      "2021-02-22 07:42:08,009\toarph 3937441 : Using source root /opt/psegs \n",
+      "2021-02-22 07:42:08,118\toarph 3937441 : Generating egg to /tmp/tmps8vfaz6l_oarphpy_eggbuild ...\n",
+      "2021-02-22 07:42:08,208\toarph 3937441 : ... done.  Egg at /tmp/tmps8vfaz6l_oarphpy_eggbuild/psegs-0.0.0-py3.8.egg\n"
+     ]
+    }
+   ],
    "source": [
     "from psegs.spark import NBSpark\n",
     "spark = NBSpark.getOrCreate()"
@@ -615,25 +626,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {
     "scrolled": false
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'KITTI360OFlowRenderer' is not defined",
+     "ename": "AttributeError",
+     "evalue": "type object 'NuscKFOnlyLCCDFFactory' has no attribute 'FUSED_LIDAR_SD_TABLE'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-16-1da7e50b2e10>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mR\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mKITTI360OFlowRenderer\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mseg_uris\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mR\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mFUSED_LIDAR_SD_TABLE\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_all_segment_uris\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mR\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbuild\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mspark\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mspark\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0monly_segments\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mseg_uris\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'KITTI360OFlowRenderer' is not defined"
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-8-fdd343157221>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mR\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mNuscKFOnlyLCCDFFactory\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mR\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mMAX_TASKS_PER_SEGMENT\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m50\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mseg_uris\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mR\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mFUSED_LIDAR_SD_TABLE\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_all_segment_uris\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mR\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbuild\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mspark\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mspark\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0monly_segments\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mseg_uris\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: type object 'NuscKFOnlyLCCDFFactory' has no attribute 'FUSED_LIDAR_SD_TABLE'"
      ]
     }
    ],
    "source": [
-    "R = KITTI360OFlowRenderer\n",
+    "R = NuscKFOnlyLCCDFFactory\n",
+    "R.MAX_TASKS_PER_SEGMENT = 50\n",
     "seg_uris = R.FUSED_LIDAR_SD_TABLE.get_all_segment_uris()\n",
     "R.build(spark=spark, only_segments=[seg_uris[0]])"
    ]
@@ -713,6 +725,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
