--- a/notebooks/cheap_optical_flow_from_fused_lidar.ipynb
+++ b/notebooks/cheap_optical_flow_from_fused_lidar.ipynb
@@ -549,10 +549,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-02-22 07:42:08,009\toarph 3937441 : Using source root /opt/psegs/psegs \n",
-      "2021-02-22 07:42:08,009\toarph 3937441 : Using source root /opt/psegs \n",
-      "2021-02-22 07:42:08,118\toarph 3937441 : Generating egg to /tmp/tmps8vfaz6l_oarphpy_eggbuild ...\n",
-      "2021-02-22 07:42:08,208\toarph 3937441 : ... done.  Egg at /tmp/tmps8vfaz6l_oarphpy_eggbuild/psegs-0.0.0-py3.8.egg\n"
+      "2021-02-22 09:40:58,644\toarph 4020481 : Using source root /opt/psegs/psegs \n",
+      "2021-02-22 09:40:58,644\toarph 4020481 : Using source root /opt/psegs \n",
+      "2021-02-22 09:40:58,726\toarph 4020481 : Generating egg to /tmp/tmpt3_mak3v_oarphpy_eggbuild ...\n",
+      "2021-02-22 09:40:58,820\toarph 4020481 : ... done.  Egg at /tmp/tmpt3_mak3v_oarphpy_eggbuild/psegs-0.0.0-py3.8.egg\n"
      ]
     }
    ],
@@ -626,26 +626,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "type object 'NuscKFOnlyLCCDFFactory' has no attribute 'FUSED_LIDAR_SD_TABLE'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-8-fdd343157221>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mR\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mNuscKFOnlyLCCDFFactory\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mR\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mMAX_TASKS_PER_SEGMENT\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m50\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mseg_uris\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mR\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mFUSED_LIDAR_SD_TABLE\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_all_segment_uris\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mR\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbuild\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mspark\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mspark\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0monly_segments\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mseg_uris\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: type object 'NuscKFOnlyLCCDFFactory' has no attribute 'FUSED_LIDAR_SD_TABLE'"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2021-02-22 09:41:02,288\tps   4020481 : Found Sequence 00 with 4541 scans\n",
+      "2021-02-22 09:41:02,291\tps   4020481 : Found Sequence 01 with 1101 scans\n",
+      "2021-02-22 09:41:02,303\tps   4020481 : Found Sequence 02 with 4661 scans\n",
+      "2021-02-22 09:41:02,305\tps   4020481 : Found Sequence 03 with 801 scans\n",
+      "2021-02-22 09:41:02,310\tps   4020481 : Found Sequence 05 with 2761 scans\n",
+      "2021-02-22 09:41:02,313\tps   4020481 : Found Sequence 06 with 1101 scans\n",
+      "2021-02-22 09:41:02,316\tps   4020481 : Found Sequence 07 with 1101 scans\n",
+      "2021-02-22 09:41:02,320\tps   4020481 : Found Sequence 09 with 1591 scans\n",
+      "2021-02-22 09:41:02,323\tps   4020481 : Found Sequence 10 with 1201 scans\n",
+      "2021-02-22 09:41:02,323\tps   4020481 : Found 18859 total scans\n",
+      "2021-02-22 09:41:02,325\tps   4020481 : Filtering to only 1 segments\n",
+      "2021-02-22 09:41:02,325\tps   4020481 : Finding scans for sequence 00 with no moving points ...\n",
+      "2021-02-22 09:41:08,703\tps   4020481 : ... sequence 00 has 3097 scans with no movers.\n",
+      "2021-02-22 09:41:23,356\tps   4020481 : Filtering to only 1 segments\n",
+      "2021-02-22 09:41:23,356\tps   4020481 : SemanticKITTIFusedWorldCloudTable building fused clouds ...\n",
+      "2021-02-22 09:41:23,357\tps   4020481 : ... have 1 segments to fuse ...\n",
+      "2021-02-22 09:41:23,357\tps   4020481 : ... working on 00 ...\n",
+      "2021-02-22 09:41:23,359\tps   4020481 : ... skipping 00; world and obj clouds done\n",
+      "2021-02-22 09:41:23,360\tps   4020481 : World Cloud: /opt/psegs/dataroot/fused_world_clouds/naive_cuboid_scrubber/semantikitti/train/00/fused_world.ply\n",
+      "2021-02-22 09:41:23,361\tps   4020481 : Obj Clouds: /opt/psegs/dataroot/fused_obj_clouds/naive_cuboid_scrubber/semantikitti/train/00\n",
+      "2021-02-22 09:41:23,368\toarph 4020481 : Progress for \n",
+      "FuseEachSegment [Pid:4020481 Id:139658779630512]\n",
+      "-----------------------  ---------------\n",
+      "Thruput\n",
+      "N thru                   1 (of 1)\n",
+      "N chunks                 1\n",
+      "Total time               0 seconds\n",
+      "Total thru               0 bytes\n",
+      "Rate                     0.0 bytes / sec\n",
+      "Hz                       255\n",
+      "Progress\n",
+      "Percent Complete         100.000000\n",
+      "Est. Time To Completion  0 seconds\n",
+      "-----------------------  ---------------\n",
+      "2021-02-22 09:41:23,368\tps   4020481 : ... SemanticKITTIFusedWorldCloudTable done fusing clouds.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "num tasks 3097\n",
+      "restrict to 5\n",
+      "oflow_task_df 5\n",
+      "coalesc to  1\n"
      ]
     }
    ],
    "source": [
-    "R = NuscKFOnlyLCCDFFactory\n",
-    "R.MAX_TASKS_PER_SEGMENT = 50\n",
+    "# R = NuscKeyframesOFlowRenderer\n",
+    "# R.MAX_TASKS_PER_SEGMENT = 5\n",
+    "R = SemanticKITTIOFlowRenderer\n",
+    "R.MAX_TASKS_PER_SEGMENT = 5\n",
     "seg_uris = R.FUSED_LIDAR_SD_TABLE.get_all_segment_uris()\n",
     "R.build(spark=spark, only_segments=[seg_uris[0]])"
    ]
