--- a/notebooks/cheap_optical_flow_from_fused_lidar.ipynb
+++ b/notebooks/cheap_optical_flow_from_fused_lidar.ipynb
@@ -549,10 +549,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-02-22 09:40:58,644\toarph 4020481 : Using source root /opt/psegs/psegs \n",
-      "2021-02-22 09:40:58,644\toarph 4020481 : Using source root /opt/psegs \n",
-      "2021-02-22 09:40:58,726\toarph 4020481 : Generating egg to /tmp/tmpt3_mak3v_oarphpy_eggbuild ...\n",
-      "2021-02-22 09:40:58,820\toarph 4020481 : ... done.  Egg at /tmp/tmpt3_mak3v_oarphpy_eggbuild/psegs-0.0.0-py3.8.egg\n"
+      "2021-02-22 10:13:07,866\toarph 4035108 : Using source root /opt/psegs/psegs \n",
+      "2021-02-22 10:13:07,866\toarph 4035108 : Using source root /opt/psegs \n",
+      "2021-02-22 10:13:07,962\toarph 4035108 : Generating egg to /tmp/tmpq34rqr4n_oarphpy_eggbuild ...\n",
+      "2021-02-22 10:13:08,053\toarph 4035108 : ... done.  Egg at /tmp/tmpq34rqr4n_oarphpy_eggbuild/psegs-0.0.0-py3.8.egg\n"
      ]
     }
    ],
@@ -635,59 +635,26 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-02-22 09:41:02,288\tps   4020481 : Found Sequence 00 with 4541 scans\n",
-      "2021-02-22 09:41:02,291\tps   4020481 : Found Sequence 01 with 1101 scans\n",
-      "2021-02-22 09:41:02,303\tps   4020481 : Found Sequence 02 with 4661 scans\n",
-      "2021-02-22 09:41:02,305\tps   4020481 : Found Sequence 03 with 801 scans\n",
-      "2021-02-22 09:41:02,310\tps   4020481 : Found Sequence 05 with 2761 scans\n",
-      "2021-02-22 09:41:02,313\tps   4020481 : Found Sequence 06 with 1101 scans\n",
-      "2021-02-22 09:41:02,316\tps   4020481 : Found Sequence 07 with 1101 scans\n",
-      "2021-02-22 09:41:02,320\tps   4020481 : Found Sequence 09 with 1591 scans\n",
-      "2021-02-22 09:41:02,323\tps   4020481 : Found Sequence 10 with 1201 scans\n",
-      "2021-02-22 09:41:02,323\tps   4020481 : Found 18859 total scans\n",
-      "2021-02-22 09:41:02,325\tps   4020481 : Filtering to only 1 segments\n",
-      "2021-02-22 09:41:02,325\tps   4020481 : Finding scans for sequence 00 with no moving points ...\n",
-      "2021-02-22 09:41:08,703\tps   4020481 : ... sequence 00 has 3097 scans with no movers.\n",
-      "2021-02-22 09:41:23,356\tps   4020481 : Filtering to only 1 segments\n",
-      "2021-02-22 09:41:23,356\tps   4020481 : SemanticKITTIFusedWorldCloudTable building fused clouds ...\n",
-      "2021-02-22 09:41:23,357\tps   4020481 : ... have 1 segments to fuse ...\n",
-      "2021-02-22 09:41:23,357\tps   4020481 : ... working on 00 ...\n",
-      "2021-02-22 09:41:23,359\tps   4020481 : ... skipping 00; world and obj clouds done\n",
-      "2021-02-22 09:41:23,360\tps   4020481 : World Cloud: /opt/psegs/dataroot/fused_world_clouds/naive_cuboid_scrubber/semantikitti/train/00/fused_world.ply\n",
-      "2021-02-22 09:41:23,361\tps   4020481 : Obj Clouds: /opt/psegs/dataroot/fused_obj_clouds/naive_cuboid_scrubber/semantikitti/train/00\n",
-      "2021-02-22 09:41:23,368\toarph 4020481 : Progress for \n",
-      "FuseEachSegment [Pid:4020481 Id:139658779630512]\n",
-      "-----------------------  ---------------\n",
-      "Thruput\n",
-      "N thru                   1 (of 1)\n",
-      "N chunks                 1\n",
-      "Total time               0 seconds\n",
-      "Total thru               0 bytes\n",
-      "Rate                     0.0 bytes / sec\n",
-      "Hz                       255\n",
-      "Progress\n",
-      "Percent Complete         100.000000\n",
-      "Est. Time To Completion  0 seconds\n",
-      "-----------------------  ---------------\n",
-      "2021-02-22 09:41:23,368\tps   4020481 : ... SemanticKITTIFusedWorldCloudTable done fusing clouds.\n"
+      "2021-02-22 10:13:11,634\tps   4035108 : Creating datums for KITTI-360 ...\n",
+      "2021-02-22 10:13:11,635\tps   4035108 : Filtering to only 1 segments\n",
+      "2021-02-22 10:13:17,736\tps   4035108 : ... seq 2013_05_28_drive_0000_sync has 101669 URIs spanning 1204 sec, creating 397 slices ...\n",
+      "2021-02-22 10:13:18,595\tps   4035108 : ... partitioned datums into 1 RDDs.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "num tasks 3097\n",
-      "restrict to 5\n",
-      "oflow_task_df 5\n",
-      "coalesc to  1\n"
+      "Building tasks table for 2013_05_28_drive_0000_sync ...\n"
      ]
     }
    ],
    "source": [
     "# R = NuscKeyframesOFlowRenderer\n",
     "# R.MAX_TASKS_PER_SEGMENT = 5\n",
-    "R = SemanticKITTIOFlowRenderer\n",
-    "R.MAX_TASKS_PER_SEGMENT = 5\n",
+    "# R = SemanticKITTIOFlowRenderer\n",
+    "# R.MAX_TASKS_PER_SEGMENT = 5\n",
+    "R = KITTI360OFlowRenderer\n",
     "seg_uris = R.FUSED_LIDAR_SD_TABLE.get_all_segment_uris()\n",
     "R.build(spark=spark, only_segments=[seg_uris[0]])"
    ]
