--- a/notebooks/cheap_optical_flow_from_fused_lidar.ipynb
+++ b/notebooks/cheap_optical_flow_from_fused_lidar.ipynb
@@ -549,10 +549,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-02-22 10:13:07,866\toarph 4035108 : Using source root /opt/psegs/psegs \n",
-      "2021-02-22 10:13:07,866\toarph 4035108 : Using source root /opt/psegs \n",
-      "2021-02-22 10:13:07,962\toarph 4035108 : Generating egg to /tmp/tmpq34rqr4n_oarphpy_eggbuild ...\n",
-      "2021-02-22 10:13:08,053\toarph 4035108 : ... done.  Egg at /tmp/tmpq34rqr4n_oarphpy_eggbuild/psegs-0.0.0-py3.8.egg\n"
+      "2021-02-23 07:03:01,363\toarph 328266 : Using source root /opt/psegs/psegs \n",
+      "2021-02-23 07:03:01,363\toarph 328266 : Using source root /opt/psegs \n",
+      "2021-02-23 07:03:01,446\toarph 328266 : Generating egg to /tmp/tmp7bai_og5_oarphpy_eggbuild ...\n",
+      "2021-02-23 07:03:01,554\toarph 328266 : ... done.  Egg at /tmp/tmp7bai_og5_oarphpy_eggbuild/psegs-0.0.0-py3.8.egg\n"
      ]
     }
    ],
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "scrolled": false
    },
@@ -635,17 +635,60 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-02-22 10:13:11,634\tps   4035108 : Creating datums for KITTI-360 ...\n",
-      "2021-02-22 10:13:11,635\tps   4035108 : Filtering to only 1 segments\n",
-      "2021-02-22 10:13:17,736\tps   4035108 : ... seq 2013_05_28_drive_0000_sync has 101669 URIs spanning 1204 sec, creating 397 slices ...\n",
-      "2021-02-22 10:13:18,595\tps   4035108 : ... partitioned datums into 1 RDDs.\n"
+      "2021-02-23 10:46:44,720\tps   328266 : Creating datums for KITTI-360 ...\n",
+      "2021-02-23 10:46:44,722\tps   328266 : Filtering to only 1 segments\n",
+      "2021-02-23 10:46:52,801\tps   328266 : ... seq 2013_05_28_drive_0000_sync has 101669 URIs spanning 1204 sec, creating 397 slices ...\n",
+      "2021-02-23 10:46:53,323\tps   328266 : ... partitioned datums into 1 RDDs.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Building tasks table for 2013_05_28_drive_0000_sync ...\n"
+      "Building tasks table for 2013_05_28_drive_0000_sync ...\n",
+      "... done.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2021-02-23 10:49:55,647\tps   328266 : Filtering to only 1 segments\n",
+      "2021-02-23 10:49:55,648\tps   328266 : KITTI360WorldCloudTableBase building fused clouds ...\n",
+      "2021-02-23 10:49:55,648\tps   328266 : ... have 1 segments to fuse ...\n",
+      "2021-02-23 10:49:55,648\tps   328266 : ... working on 2013_05_28_drive_0000_sync ...\n",
+      "2021-02-23 10:49:55,667\tps   328266 : ... skipping 2013_05_28_drive_0000_sync; world and obj clouds done\n",
+      "2021-02-23 10:49:55,668\tps   328266 : World Cloud: /opt/psegs/dataroot/fused_world_clouds/naive_cuboid_scrubber/kitti-360/train/2013_05_28_drive_0000_sync/fused_world.ply\n",
+      "2021-02-23 10:49:55,668\tps   328266 : Obj Clouds: /opt/psegs/dataroot/fused_obj_clouds/naive_cuboid_scrubber/kitti-360/train/2013_05_28_drive_0000_sync\n",
+      "2021-02-23 10:49:55,670\toarph 328266 : Progress for \n",
+      "FuseEachSegment [Pid:328266 Id:139868735179264]\n",
+      "-----------------------  ---------------\n",
+      "Thruput\n",
+      "N thru                   1 (of 1)\n",
+      "N chunks                 1\n",
+      "Total time               0.02 seconds\n",
+      "Total thru               0 bytes\n",
+      "Rate                     0.0 bytes / sec\n",
+      "Hz                       50\n",
+      "Progress\n",
+      "Percent Complete         100.000000\n",
+      "Est. Time To Completion  0 seconds\n",
+      "-----------------------  ---------------\n",
+      "2021-02-23 10:49:55,671\tps   328266 : ... KITTI360WorldCloudTableBase done fusing clouds.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "num tasks 11497\n",
+      "restrict to 2\n",
+      "oflow_task_df 2\n",
+      "coalesc to  1\n",
+      "saved to /tmp/oflow_out/oflow_0.pkl\n",
+      "saved to /tmp/oflow_out/oflow_1.pkl\n",
+      "saved to /tmp/oflow_out/oflow_2.pkl\n",
+      "saved to /tmp/oflow_out/oflow_3.pkl\n"
      ]
     }
    ],
@@ -655,13 +698,14 @@
     "# R = SemanticKITTIOFlowRenderer\n",
     "# R.MAX_TASKS_PER_SEGMENT = 5\n",
     "R = KITTI360OFlowRenderer\n",
+    "# R.MAX_TASKS_PER_SEGMENT = 2\n",
     "seg_uris = R.FUSED_LIDAR_SD_TABLE.get_all_segment_uris()\n",
     "R.build(spark=spark, only_segments=[seg_uris[0]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "scrolled": false
    },
