--- a/notebooks/cheap_optical_flow_eval.ipynb
+++ b/notebooks/cheap_optical_flow_eval.ipynb
@@ -148,6 +148,18 @@
     "    flow = attr.ib(default=None)\n",
     "    \"\"\"A callable or numpy array representing optical flow from img1 -> img2\"\"\"\n",
     "    \n",
+    "    # to add:\n",
+    "    # diff time seconds\n",
+    "    # semantic image for frame 1, frame 2 [could be painted by cuboids]\n",
+    "    # instance images for frame 1, frame 2 [could be painted by cuboids]\n",
+    "    #   -- for colored images, at first just pivot all oflow metrics by colors\n",
+    "    # get uvdviz1 uvdviz2 (scene flow)\n",
+    "    #   * for deepeform, their load_flow will work\n",
+    "    #   * for kitti, we have to read their disparity images\n",
+    "    # get uvd1 uvd2 (lidar for nearest neighbor stuff)\n",
+    "    # depth image for frame 1, frame 2 [could be interpolated by cuboids]\n",
+    "    #   -- at first bucket the depth coarsely and pivot al oflow by colors\n",
+    "    \n",
     "    def get_img1(self):\n",
     "        if isinstance(self.img1, CloudpickeledCallable):\n",
     "            self.img1 = self.img1()\n",
@@ -644,7 +656,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## PSegs Synthetic Optical Flow from Fused Lidar"
+    "## PSegs Synthetic Flow from Fused Lidar"
    ]
   },
   {
