--- a/notebooks/cheap_optical_flow_eval.ipynb
+++ b/notebooks/cheap_optical_flow_eval.ipynb
@@ -90,7 +90,15 @@
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
-    "sys.path.append(ALIB_SRC_DIR)\n"
+    "sys.path.append(ALIB_SRC_DIR)\n",
+    "\n",
+    "\n",
+    "## Prepare a build of local psegs for inclusion\n",
+    "!cd /opt/psegs && python3 setup.py clean bdist_egg\n",
+    "PSEGS_EGG_PATH = '/opt/psegs/dist/psegs-0.0.1-py3.8.egg'\n",
+    "assert os.path.exists(PSEGS_EGG_PATH), \"Build failed?\"\n",
+    "sys.path.append('/opt/psegs')\n",
+    "import psegs\n"
    ]
   },
   {
@@ -129,7 +137,9 @@
     "class OpticalFlowPair(object):\n",
     "    \"\"\"A flyweight for a pair of images with an optical flow field.\n",
     "    Supports lazy-loading of large data attributes.\"\"\"\n",
-    "        \n",
+    "    \n",
+    "    ## Core Attributes (Required for All Datasets)\n",
+    "    \n",
     "    dataset = attr.ib(type=str, default='')\n",
     "    \"\"\"To which dataset does this pair belong?\"\"\"\n",
     "    \n",
@@ -143,10 +153,20 @@
     "    \"\"\"URI or numpy array or CloudPickleCallable for the first image (source image)\"\"\"\n",
     "\n",
     "    img2 = attr.ib(default=None)\n",
-    "    \"\"\"URI or numpy array or CloudpickeledCallablefor the second image (target image)\"\"\"\n",
+    "    \"\"\"URI or numpy array or CloudpickeledCallable for the second image (target image)\"\"\"\n",
     "    \n",
     "    flow = attr.ib(default=None)\n",
-    "    \"\"\"A callable or numpy array representing optical flow from img1 -> img2\"\"\"\n",
+    "    \"\"\"A numpy array or callable or CloudpickeledCallable representing optical flow from img1 -> img2\"\"\"\n",
+    "    \n",
+    "    ## Optional Attributes (For Select Datasets)\n",
+    "    \n",
+    "    diff_time_sec = attr.ib(type=float, default=0.0)\n",
+    "    \"\"\"Difference in time (in seconds) between the views / poses depicted in `img1` and `img2`.\"\"\"\n",
+    "    \n",
+    "    translation_meters = attr.ib(type=float, default=0.0)\n",
+    "    \"\"\"Difference in ego translation (in meters) between the views / poses depicted in `img1` and `img2`.\"\"\"\n",
+    "    \n",
+    "    \n",
     "    \n",
     "    # to add:\n",
     "    # diff time seconds\n",
@@ -283,43 +303,36 @@
    "source": [
     "%%writefile cheap_optical_flow_eval_analysis/midd.py\n",
     "\n",
-    "import attr\n",
+    "def midd_read_flow(path):\n",
+    "    import os\n",
+    "    import numpy as np\n",
+    "    # Based upon: https://github.com/Johswald/flow-code-python/blob/master/readFlowFile.py\n",
+    "    # compute colored image to visualize optical flow file .flo\n",
+    "    # Author: Johannes Oswald, Technical University Munich\n",
+    "    # Contact: johannes.oswald@tum.de\n",
+    "    # Date: 26/04/2017\n",
+    "    # For more information, check http://vision.middlebury.edu/flow/ \n",
+    "    assert os.path.exists(path) and path.endswith('.flo'), path\n",
+    "    f = open(path, 'rb')\n",
+    "    flo_number = np.fromfile(f, np.float32, count=1)[0]\n",
+    "    TAG_FLOAT = 202021.25\n",
+    "    assert flo_number == TAG_FLOAT, 'Flow number %r incorrect.' % flo_number\n",
+    "    w = np.fromfile(f, np.int32, count=1)\n",
+    "    h = np.fromfile(f, np.int32, count=1)\n",
     "\n",
-    "# Written as a functor to make it easier to pickle\n",
-    "@attr.s(slots=True, eq=False, weakref_slot=False)\n",
-    "class MiddReadFlow(object):\n",
-    "    path = attr.ib(default='')\n",
-    "    def __call__(self):\n",
-    "        import os\n",
-    "        import numpy as np\n",
-    "        # Based upon: https://github.com/Johswald/flow-code-python/blob/master/readFlowFile.py\n",
-    "        # compute colored image to visualize optical flow file .flo\n",
-    "        # Author: Johannes Oswald, Technical University Munich\n",
-    "        # Contact: johannes.oswald@tum.de\n",
-    "        # Date: 26/04/2017\n",
-    "        # For more information, check http://vision.middlebury.edu/flow/ \n",
-    "        path = self.path\n",
-    "        assert os.path.exists(path) and path.endswith('.flo'), path\n",
-    "        f = open(path, 'rb')\n",
-    "        flo_number = np.fromfile(f, np.float32, count=1)[0]\n",
-    "        TAG_FLOAT = 202021.25\n",
-    "        assert flo_number == TAG_FLOAT, 'Flow number %r incorrect.' % flo_number\n",
-    "        w = np.fromfile(f, np.int32, count=1)\n",
-    "        h = np.fromfile(f, np.int32, count=1)\n",
+    "    #if error try: data = np.fromfile(f, np.float32, count=2*w[0]*h[0])\n",
+    "    data = np.fromfile(f, np.float32, count=int(2*w*h))\n",
     "\n",
-    "        #if error try: data = np.fromfile(f, np.float32, count=2*w[0]*h[0])\n",
-    "        data = np.fromfile(f, np.float32, count=int(2*w*h))\n",
+    "    # Reshape data into 3D array (columns, rows, bands)\n",
+    "    flow = np.resize(data, (int(h), int(w), 2))\t\n",
+    "    f.close()\n",
     "\n",
-    "        # Reshape data into 3D array (columns, rows, bands)\n",
-    "        flow = np.resize(data, (int(h), int(w), 2))\t\n",
-    "        f.close()\n",
+    "    # We found that there are some invalid (?) (i.e. very large) flows, so we're going\n",
+    "    # to ignore those for this experiment.\n",
+    "    invalid = (flow >= 1666)\n",
+    "    flow[invalid] = 0\n",
     "\n",
-    "        # We found that there are some invalid (?) (i.e. very large) flows, so we're going\n",
-    "        # to ignore those for this experiment.\n",
-    "        invalid = (flow >= 1666)\n",
-    "        flow[invalid] = 0\n",
-    "\n",
-    "        return flow\n"
+    "    return flow\n"
    ]
   },
   {
@@ -344,7 +357,7 @@
     "            img1='file://' + os.path.join(MIDD_DATA_ROOT, scene['input']),\n",
     "            id2=scene['expected_out'],\n",
     "            img2='file://' + os.path.join(MIDD_DATA_ROOT, scene['expected_out']),\n",
-    "            flow=MiddReadFlow(os.path.join(MIDD_DATA_ROOT, scene['flow_gt'])))\n",
+    "            flow=CloudpickeledCallable(lambda: midd_read_flow(os.path.join(MIDD_DATA_ROOT, scene['flow_gt']))))\n",
     "    \n",
     "    if RUN_FULL_ANALYSIS:\n",
     "        ALL_FPS.append(copy.deepcopy(p))\n",
